--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,8 @@
+body {
+    background-image: url("{{asset('img/fondo.jpg')}}");
+    background-size: cover;
+}
+
 h1 {
     margin-top: 30px;
     color: darkblue;
